daemon: Don't crash if using powerdevil 6.3 with kwin 6.2

BUG: 501446