daemon/controllers/externalbrightnesscontrol.cpp
@@ -39,11 +39,15 @@ ExternalBrightnessControl::ExternalBrightnessControl(ExternalBrightnessControlle
         set_edid(QString::fromStdString(data->toBase64().toStdString()));
     }
     set_max_brightness(display->maxBrightness());
-    set_observed_brightness(m_display->brightness());
+    if (version() >= 2) {
+        set_observed_brightness(m_display->brightness());
+    }
     commit();
     connect(display, &DisplayBrightness::externalBrightnessChangeObserved, this, [this]() {
         set_max_brightness(m_display->maxBrightness());
-        set_observed_brightness(m_display->brightness());
+        if (version() >= 2) {
+            set_observed_brightness(m_display->brightness());
+        }
         commit();
     });
 }
